// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. comment lead and cartoon - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAH />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "66.7%",
        }
      }
    >
      <TileAI />
    </View>
  </View>
</View>
`;

exports[`2. daily universal register - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "marginHorizontal": 30,
        "marginVertical": 15,
        "padding": 15,
      }
    }
  >
    <Image
      style={
        Object {
          "height": 60,
          "marginBottom": 10,
          "marginTop": 15,
          "width": 237,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 15,
          "lineHeight": 21,
          "marginBottom": 15,
        }
      }
    >
      Daily Universal Register
    </Text>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileS />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 15,
            }
          }
        />
        <TileS />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileS />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 15,
            }
          }
        />
        <TileS />
      </View>
    </View>
  </View>
</View>
`;

exports[`3. lead one and one - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "75%",
        }
      }
    >
      <TileU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "width": "25%",
        }
      }
    >
      <TileAA />
    </View>
  </View>
</View>
`;

exports[`4. lead one full width - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`5. lead two no pic and two - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileE />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileD />
    </View>
  </View>
</View>
`;

exports[`6. leaders slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#F0F0F0",
        "marginHorizontal": 30,
        "marginVertical": 15,
        "paddingTop": 30,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <Image
        style={
          Object {
            "height": 42,
            "width": 237,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#850029",
              "fontFamily": "TimesDigitalW04-Regular",
              "fontSize": 15,
              "lineHeight": 15,
              "textAlign": "center",
            }
          }
        >
           Leading Articles 
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingHorizontal": 5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 30,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 15,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 30,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 15,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
    </View>
  </View>
</View>
`;

exports[`7. secondary one and four - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "marginHorizontal": 30,
        "marginVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#272D34",
          "flexDirection": "row",
          "margin": 15,
          "marginBottom": 10,
        }
      }
    >
      <TheTimesLogo />
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#4D4D4D",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "padding": 5,
          "paddingTop": 0,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileN />
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
          <View
            style={
              Object {
                "borderColor": "#4D4D4D",
                "borderRightWidth": 1,
                "borderStyle": "solid",
                "marginVertical": 10,
              }
            }
          />
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
          <View
            style={
              Object {
                "borderColor": "#4D4D4D",
                "borderRightWidth": 1,
                "borderStyle": "solid",
                "marginVertical": 10,
              }
            }
          />
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`8. secondary one - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`9. secondary four - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAR />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAR />
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "paddingVertical": 5,
        }
      }
    >
      <TileB />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileB />
    </View>
  </View>
</View>
`;

exports[`10. secondary one and columnist - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "75%",
        }
      }
    >
      <TileAB />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "paddingVertical": 5,
          "width": "25%",
        }
      }
    >
      <TileB />
    </View>
  </View>
</View>
`;

exports[`11. secondary two and two - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`12. lead one and four slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "60%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`13. standard slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 50,
      }
    }
  >
    <View>
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
    </View>
  </View>
</View>
`;

exports[`14. secondary two no pic and two - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAE />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAE />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 15,
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`15. list two and six no pic - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TileAS />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TileAS />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`16. puzzle - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 20,
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAK />
    </View>
  </View>
</View>
`;

exports[`17. front lead two no pic and two - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexGrow": 1,
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 50,
        "paddingTop": 15,
        "width": 1000,
      }
    }
  >
    <View
      style={
        Object {
          "width": "41.6%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 6,
          }
        }
      >
        <TileXFront />
      </View>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#999999",
            "borderStyle": "solid",
          }
        }
      />
      <View
        style={
          Object {
            "flex": 4,
          }
        }
      >
        <TileYFront />
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#999999",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "16.8%",
        }
      }
    >
      <TileALFront />
    </View>
    <View
      style={
        Object {
          "borderColor": "#999999",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "41.6%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileEFront />
      </View>
    </View>
  </View>
</View>
`;

exports[`18. top secondary (from topsecondaryfourslice) - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "66.6%",
        }
      }
    >
      <TileAT />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
    </View>
  </View>
</View>
`;

exports[`19. top secondary (from topsecondarytwoandtwoslice) - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "66.6%",
        }
      }
    >
      <TileAT />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
    </View>
  </View>
</View>
`;

exports[`20. top secondary (from topsecondarytwonopicandtwoslice) - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "66.6%",
        }
      }
    >
      <TileAT />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
    </View>
  </View>
</View>
`;

exports[`21. comment lead and cartoon - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAH />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "66.7%",
        }
      }
    >
      <TileAI />
    </View>
  </View>
</View>
`;

exports[`22. daily universal register - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "marginHorizontal": 20,
        "marginVertical": 15,
        "padding": 15,
      }
    }
  >
    <Image
      style={
        Object {
          "height": 60,
          "marginBottom": 10,
          "marginTop": 15,
          "width": 237,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 15,
          "lineHeight": 21,
          "marginBottom": 15,
        }
      }
    >
      Daily Universal Register
    </Text>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileS />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 15,
            }
          }
        />
        <TileS />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileS />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
              "marginHorizontal": 15,
            }
          }
        />
        <TileS />
      </View>
    </View>
  </View>
</View>
`;

exports[`23. lead one and one - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "83.5%",
        }
      }
    >
      <TileZ />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "width": "16.5%",
        }
      }
    >
      <TileAF />
    </View>
  </View>
</View>
`;

exports[`24. lead one full width - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`25. lead two no pic and two - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "42%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "width": "16%",
        }
      }
    >
      <TileAL />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "width": "42%",
        }
      }
    >
      <TileE />
    </View>
  </View>
</View>
`;

exports[`26. leaders slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#F0F0F0",
        "marginHorizontal": 20,
        "marginVertical": 15,
        "paddingTop": 30,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <Image
        style={
          Object {
            "height": 42,
            "width": 237,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#850029",
              "fontFamily": "TimesDigitalW04-Regular",
              "fontSize": 15,
              "lineHeight": 15,
              "textAlign": "center",
            }
          }
        >
           Leading Articles 
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 20,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 60,
            "marginTop": 30,
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 20,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 60,
            "marginTop": 30,
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 20,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
    </View>
  </View>
</View>
`;

exports[`27. secondary one and four - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "marginHorizontal": 20,
        "marginVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#272D34",
          "flexDirection": "row",
          "margin": 15,
          "marginBottom": 10,
        }
      }
    >
      <TheTimesLogo />
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#4D4D4D",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "padding": 5,
          "paddingTop": 0,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileN />
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
          <View
            style={
              Object {
                "borderColor": "#4D4D4D",
                "borderRightWidth": 1,
                "borderStyle": "solid",
                "marginVertical": 10,
              }
            }
          />
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
          <View
            style={
              Object {
                "borderColor": "#4D4D4D",
                "borderRightWidth": 1,
                "borderStyle": "solid",
                "marginVertical": 10,
              }
            }
          />
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileO />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`28. secondary one - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`29. secondary four - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAR />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAR />
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "paddingVertical": 5,
        }
      }
    >
      <TileB />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileB />
    </View>
  </View>
</View>
`;

exports[`30. secondary one and columnist - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "66.7%",
        }
      }
    >
      <TileAB />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "paddingVertical": 5,
          "width": "33.3%",
        }
      }
    >
      <TileB />
    </View>
  </View>
</View>
`;

exports[`31. secondary two and two - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.4%",
        }
      }
    >
      <TileAM />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "16.6%",
        }
      }
    >
      <TileAN />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "33.4%",
        }
      }
    >
      <TileAM />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "16.6%",
        }
      }
    >
      <TileAN />
    </View>
  </View>
</View>
`;

exports[`32. lead one and four slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "60%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`33. standard slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 50,
      }
    }
  >
    <View>
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileK />
    </View>
  </View>
</View>
`;

exports[`34. secondary two no pic and two - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "width": "66.6%",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileAE />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileAE />
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "marginVertical": 5,
        }
      }
    >
      <TileG />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileG />
    </View>
  </View>
</View>
`;

exports[`35. list two and six no pic - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TileAS />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TileAS />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileL />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`36. puzzle - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAK />
    </View>
  </View>
</View>
`;

exports[`37. front lead two no pic and two - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexGrow": 1,
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 50,
        "paddingTop": 15,
        "width": 1000,
      }
    }
  >
    <View
      style={
        Object {
          "width": "41.6%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 6,
          }
        }
      >
        <TileXFront />
      </View>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#999999",
            "borderStyle": "solid",
          }
        }
      />
      <View
        style={
          Object {
            "flex": 4,
          }
        }
      >
        <TileYFront />
      </View>
    </View>
    <View
      style={
        Object {
          "borderColor": "#999999",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "16.8%",
        }
      }
    >
      <TileALFront />
    </View>
    <View
      style={
        Object {
          "borderColor": "#999999",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginTop": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "41.6%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileEFront />
      </View>
    </View>
  </View>
</View>
`;

exports[`38. top secondary (from topsecondaryfourslice) - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "66.6%",
        }
      }
    >
      <TileAU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
    </View>
  </View>
</View>
`;

exports[`39. top secondary (from topsecondarytwoandtwoslice) - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "66.6%",
        }
      }
    >
      <TileAU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
    </View>
  </View>
</View>
`;

exports[`40. top secondary (from topsecondarytwonopicandtwoslice) - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 30,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 20,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "width": "66.6%",
        }
      }
    >
      <TileAU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
          }
        }
      />
      <TileAV />
    </View>
  </View>
</View>
`;

exports[`41. comment lead and cartoon - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "33.3%",
          }
        }
      >
        <TileAH />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "66.7%",
          }
        }
      >
        <TileAI />
      </View>
    </View>
  </View>
</View>
`;

exports[`42. daily universal register - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F0F0F0",
          "flex": 1,
          "marginHorizontal": 20,
          "marginVertical": 15,
          "padding": 15,
        }
      }
    >
      <Image
        style={
          Object {
            "height": 60,
            "marginBottom": 10,
            "marginTop": 15,
            "width": 237,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 15,
            "lineHeight": 21,
            "marginBottom": 15,
          }
        }
      >
        Daily Universal Register
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TileS />
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#DBDBDB",
                "borderStyle": "solid",
                "marginHorizontal": 15,
              }
            }
          />
          <TileS />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 15,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TileS />
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#DBDBDB",
                "borderStyle": "solid",
                "marginHorizontal": 15,
              }
            }
          />
          <TileS />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`43. lead one and one - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "83.5%",
          }
        }
      >
        <TileZ />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "width": "16.5%",
          }
        }
      >
        <TileAF />
      </View>
    </View>
  </View>
</View>
`;

exports[`44. lead one full width - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <TileR />
  </View>
</View>
`;

exports[`45. lead two no pic and two - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "42%",
          }
        }
      >
        <TileX />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileY />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "width": "16%",
          }
        }
      >
        <TileAL />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "width": "42%",
          }
        }
      >
        <TileE />
      </View>
    </View>
  </View>
</View>
`;

exports[`46. leaders slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#F0F0F0",
          "marginHorizontal": 20,
          "marginVertical": 15,
          "paddingTop": 30,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Image
          style={
            Object {
              "height": 42,
              "width": 237,
            }
          }
        />
        <View
          style={
            Object {
              "paddingTop": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#850029",
                "fontFamily": "TimesDigitalW04-Regular",
                "fontSize": 15,
                "lineHeight": 15,
                "textAlign": "center",
              }
            }
          >
             Leading Articles 
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "width": "33%",
            }
          }
        >
          <TileM />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginBottom": 60,
              "marginTop": 30,
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "width": "33%",
            }
          }
        >
          <TileM />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginBottom": 60,
              "marginTop": 30,
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "width": "33%",
            }
          }
        >
          <TileM />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`47. secondary one and four - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#272D34",
          "marginHorizontal": 20,
          "marginVertical": 15,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#272D34",
            "flexDirection": "row",
            "margin": 15,
            "marginBottom": 10,
          }
        }
      >
        <TheTimesLogo />
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#4D4D4D",
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "padding": 5,
            "paddingTop": 0,
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileN />
        </View>
        <View
          style={
            Object {
              "borderColor": "#4D4D4D",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 10,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <TileO />
            </View>
            <View
              style={
                Object {
                  "borderColor": "#4D4D4D",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "marginVertical": 10,
                }
              }
            />
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <TileO />
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#4D4D4D",
                "borderStyle": "solid",
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <TileO />
            </View>
            <View
              style={
                Object {
                  "borderColor": "#4D4D4D",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "marginVertical": 10,
                }
              }
            />
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <TileO />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`48. secondary one - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <TileW />
  </View>
</View>
`;

exports[`49. secondary four - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 2,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TileAR />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 15,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TileAR />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "paddingVertical": 5,
          }
        }
      >
        <TileB />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileB />
      </View>
    </View>
  </View>
</View>
`;

exports[`50. secondary one and columnist - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "58%",
          }
        }
      >
        <TileAB />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "paddingVertical": 5,
            "width": "42%",
          }
        }
      >
        <TileB />
      </View>
    </View>
  </View>
</View>
`;

exports[`51. secondary two and two - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "33.4%",
          }
        }
      >
        <TileAM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "16.6%",
          }
        }
      >
        <TileAN />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "33.4%",
          }
        }
      >
        <TileAM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "16.6%",
          }
        }
      >
        <TileAN />
      </View>
    </View>
  </View>
</View>
`;

exports[`52. lead one and four slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "60%",
          }
        }
      >
        <TileAC />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <TileAD />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAD />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAD />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAD />
      </View>
    </View>
  </View>
</View>
`;

exports[`53. standard slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingHorizontal": 50,
        }
      }
    >
      <View>
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileK />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileK />
      </View>
    </View>
  </View>
</View>
`;

exports[`54. secondary two no pic and two - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "66.6%",
          }
        }
      >
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileAE />
        </View>
        <View
          style={
            Object {
              "borderColor": "#DBDBDB",
              "borderRightWidth": 1,
              "borderStyle": "solid",
              "marginVertical": 15,
            }
          }
        />
        <View
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <TileAE />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 15,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "marginVertical": 5,
          }
        }
      >
        <TileG />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`55. list two and six no pic - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 10,
          "marginVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAS />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <TileAS />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileL />
          </View>
          <View
            style={
              Object {
                "borderColor": "#DBDBDB",
                "borderRightWidth": 1,
                "borderStyle": "solid",
                "marginVertical": 10,
              }
            }
          />
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileL />
          </View>
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileL />
          </View>
          <View
            style={
              Object {
                "borderColor": "#DBDBDB",
                "borderRightWidth": 1,
                "borderStyle": "solid",
                "marginVertical": 10,
              }
            }
          />
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileL />
          </View>
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileL />
          </View>
          <View
            style={
              Object {
                "borderColor": "#DBDBDB",
                "borderRightWidth": 1,
                "borderStyle": "solid",
                "marginVertical": 10,
              }
            }
          />
          <View
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <TileL />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`56. puzzle - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingTop": 15,
        }
      }
    >
      <View
        style={
          Object {
            "width": "33.3%",
          }
        }
      >
        <TileAK />
      </View>
      <View
        style={
          Object {
            "width": "33.3%",
          }
        }
      >
        <TileAK />
      </View>
      <View
        style={
          Object {
            "width": "33.3%",
          }
        }
      >
        <TileAK />
      </View>
    </View>
  </View>
</View>
`;

exports[`57. front lead two no pic and two - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexGrow": 1,
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 50,
          "paddingTop": 15,
          "width": 1000,
        }
      }
    >
      <View
        style={
          Object {
            "width": "35%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <TileXFront />
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#999999",
              "borderStyle": "solid",
            }
          }
        />
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <TileYFront />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#999999",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginTop": 0,
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "18%",
          }
        }
      >
        <TileALFront />
      </View>
      <View
        style={
          Object {
            "borderColor": "#999999",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginTop": 0,
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "46%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TileEFront />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`58. top secondary (from topsecondaryfourslice) - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 20,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "66.6%",
          }
        }
      >
        <TileAU />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "33.3%",
          }
        }
      >
        <TileAV />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAV />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAV />
      </View>
    </View>
  </View>
</View>
`;

exports[`59. top secondary (from topsecondarytwoandtwoslice) - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 20,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "66.6%",
          }
        }
      >
        <TileAU />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "33.3%",
          }
        }
      >
        <TileAV />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAV />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAV />
      </View>
    </View>
  </View>
</View>
`;

exports[`60. top secondary (from topsecondarytwonopicandtwoslice) - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "paddingHorizontal": 10,
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "width": 1180,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginHorizontal": 20,
          "paddingVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "66.6%",
          }
        }
      >
        <TileAU />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "33.3%",
          }
        }
      >
        <TileAV />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAV />
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DBDBDB",
              "borderStyle": "solid",
            }
          }
        />
        <TileAV />
      </View>
    </View>
  </View>
</View>
`;
